--- a/STM32MotorDrive.ioc
+++ b/STM32MotorDrive.ioc
@@ -1,15 +1,51 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Offset-4\#ChannelRegularConversion,NbrOfConversionFlag,master,SubFamily
+ADC1.NbrOfConversionFlag=1
+ADC1.Offset-4\#ChannelRegularConversion=0
+ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-4\#ChannelRegularConversion=1
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SubFamily=STM32F302x8
+ADC1.master=1
+DAC.DAC_Trigger=DAC_TRIGGER_SOFTWARE
+DAC.IPParameters=DAC_Trigger
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F3
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP0=ADC1
+Mcu.IP1=DAC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM6
+Mcu.IPNb=8
 Mcu.Name=STM32F302R(6-8)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.PinsNb=1
+Mcu.Pin0=PC0
+Mcu.Pin1=PC1
+Mcu.Pin10=PB2
+Mcu.Pin11=PB10
+Mcu.Pin12=PB12
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA15
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PC2
+Mcu.Pin20=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin3=PC3
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA4
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F302R8Tx
@@ -24,7 +60,87 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=I_U
+PA0.Locked=true
+PA0.Mode=IN1-Single-Ended
+PA0.Signal=ADC1_IN1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=V_DC
+PA1.Locked=true
+PA1.Mode=IN2-Single-Ended
+PA1.Signal=ADC1_IN2
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=W_H
+PA10.Locked=true
+PA10.Signal=S_TIM1_CH3
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA15.GPIO_Label=A
+PA15.GPIO_PuPd=GPIO_PULLUP
+PA15.Locked=true
+PA15.Signal=S_TIM2_CH1_ETR
+PA4.Signal=COMP_DAC1_group
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=U_L
+PA7.Locked=true
+PA7.Mode=Output Compare1 CH1 CH1N
+PA7.Signal=TIM1_CH1N
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=U_H
+PA8.Locked=true
+PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=V_H
+PA9.Locked=true
+PA9.Signal=S_TIM1_CH2
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=V_L
+PB0.Locked=true
+PB0.Mode=Output Compare2 CH2 CH2N
+PB0.Signal=TIM1_CH2N
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=W_L
+PB1.Locked=true
+PB1.Mode=Output Compare3 CH3 CH3N
+PB1.Signal=TIM1_CH3N
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=Z
+PB10.GPIO_PuPd=GPIO_PULLUP
+PB10.Locked=true
+PB10.Signal=S_TIM2_CH3
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=KILL
+PB12.Mode=Activate-Break-Input
+PB12.Signal=TIM1_BKIN
+PB2.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PB2.GPIO_Label=IHM09LEDRED
+PB2.GPIO_PuPd=GPIO_NOPULL
+PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB3.GPIO_Label=B
+PB3.GPIO_PuPd=GPIO_PULLUP
+PB3.Locked=true
+PB3.Signal=S_TIM2_CH2
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=I_V
+PC0.Locked=true
+PC0.Signal=ADCx_IN6
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=I_W
+PC1.Locked=true
+PC1.Signal=ADCx_IN7
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=Temp. Sens.
+PC2.Locked=true
+PC2.Signal=ADCx_IN8
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=IHM09SPEED_VR
+PC3.Locked=true
+PC3.Signal=ADCx_IN9
 PCC.Checker=false
 PCC.Line=STM32F302
 PCC.MCU=STM32F302R(6-8)Tx
@@ -60,12 +176,17 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.CortexFreq_Value=8000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true
+RCC.ADC12outputFreq_Value=32000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.CortexFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=32000000
 RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
@@ -73,18 +194,69 @@ RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLMCOFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIM2Freq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.I2SClocksFreq_Value=32000000
+RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
-RCC.PLLCLKFreq_Value=8000000
-RCC.PLLMCOFreq_Value=8000000
+RCC.MCOFreq_Value=32000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMCOFreq_Value=32000000
+RCC.PLLMUL=RCC_PLL_MUL8
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
-RCC.SYSCLKFreq_VALUE=8000000
-RCC.TIM2Freq_Value=8000000
-RCC.USART1Freq_Value=8000000
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIM15Freq_Value=32000000
+RCC.TIM16Freq_Value=32000000
+RCC.TIM17Freq_Value=32000000
+RCC.TIM1Freq_Value=32000000
+RCC.TIM2Freq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USBFreq_Value=32000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.ADCx_IN6.0=ADC1_IN6,IN6-Single-Ended
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7,IN7-Single-Ended
+SH.ADCx_IN7.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8-Single-Ended
+SH.ADCx_IN8.ConfNb=1
+SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
+SH.ADCx_IN9.ConfNb=1
+SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
+SH.COMP_DAC1_group.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1 CH1N
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Output Compare2 CH2 CH2N
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,Output Compare3 CH3 CH3N
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,Input_Capture3_from_TI3
+SH.S_TIM2_CH3.ConfNb=1
+TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_ENABLE
+TIM1.Channel-Output\ Compare1\ CH1\ CH1N=TIM_CHANNEL_1
+TIM1.Channel-Output\ Compare2\ CH2\ CH2N=TIM_CHANNEL_2
+TIM1.Channel-Output\ Compare3\ CH3\ CH3N=TIM_CHANNEL_3
+TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
+TIM1.DeadTime=3
+TIM1.IPParameters=CounterMode,Period,ClockDivision,Channel-Output Compare3 CH3 CH3N,AutomaticOutput,DeadTime,Channel-Output Compare2 CH2 CH2N,Channel-Output Compare1 CH1 CH1N
+TIM1.Period=10
+TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-Input_Capture3_from_TI3
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM6.IPParameters=Period,TIM_MasterOutputTrigger,AutoReloadPreload,Prescaler
+TIM6.Period=50000
+TIM6.Prescaler=5000
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 isbadioc=false
