Include Arm_math
Succces to build.

--- a/STM32MotorDrive.ioc
+++ b/STM32MotorDrive.ioc
@@ -151,10 +151,10 @@ PCC.Temperature=25
 PCC.Vdd=3.6
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
+ProjectManager.BackupPrevious=true
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
